# d2-ruin-farm

./: .gitignore  README.md  config_1920.toml  config_2560.toml  pyproject.toml  requirements.txt  settings.toml
src/: config.py  directx.py  run.py  screenshot.py  settings.py  size.py  util.py
